--- a/lab-2/ll-2-overview-presentation.Rmd
+++ b/lab-2/ll-2-overview-presentation.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Machine Learning Learning Lab 1: Prediction"
+title: "Machine Learning Learning Lab 2: Training and Testing Data"
 subtitle: "Overview Presentation"
 author: "**Dr. Joshua Rosenberg**"
 institute: "LASER Institute"
@@ -82,7 +82,6 @@ We have some data and want to develop a prediction model. Supervised machine lea
 .panelset[
 
 .panel[.panel-name[Review p1]
-
 
 # What technique should I choose?
 
@@ -388,15 +387,6 @@ Estrellado, R. A., Freer, E. A., Mostipak, J., Rosenberg, J. M., & Velásquez, I
 
 ]
 ]
-
----
-
-# Troubleshooting and setup
-
-- Please view [this Google doc](https://docs.google.com/document/d/14Jc-KG3m5k1BvyKWqw7KmDD21IugU5nV5edfJkZyspY/edit)
-- Change default settings: Tools -> Global Settings -> Workspace -> DO NOT restore workspace 
-- Change default settings: Tools -> Global Settings -> Workspace -> Save workspace to .RData NEVER
-- Session -> Restart R and Clear Output is a good place to start
 
 ---
 
